# SASSy

./: .gitignore  README.md  environment.yml  generate_report.py  journal.md  pyproject.toml  run_and_plot.py
analysis/utils/: oissl_parser.py  test_oissl_parser.py
configs/: run_BM1_baseline.yaml  run_COMP1_direct.yaml  run_COMP2_transfer.yaml  run_COMP3_full_graph.yaml  run_THY1_baseline.yaml
docs/: adding_a_model.md  config_graph_reference.md  issl_specification.md
figures/: generate_figures.py
models/_base/: issl_writer.py  model_base.py
models/blood_transit/: model.py  parameters.yaml
models/blood_transit/tests/: test_transit.py
models/bm_haematopoiesis/: model.py  parameters.yaml
models/bm_haematopoiesis/tests/: test_bm.py
models/peripheral_ln/: model.py  parameters.yaml
models/peripheral_ln/tests/: test_pln.py
models/thymus_selection/: model.py  parameters.yaml
models/thymus_selection/tests/: test_thymus.py
orchestrator/: main.py
orchestrator/components/: calibration_bridge.py  causal_resolver.py  constraint_engine.py  ingestion.py  output_aggregator.py  scheduler.py  state_registry.py  transfer_dispatcher.py  watchdog.py
orchestrator/tests/: test_causal_resolver.py  test_scheduler.py
reports/: plot_results.py
schemas/: config_graph_v1.schema.json  issl_v1.schema.json  oissl_v1.schema.json
schemas/scene_schemas/: immune_ontogeny_v1.json
supplementary/: table_S1_parameters.csv
